# data-storage-systems

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_graph.py
include/: compression_algorithm.hpp  compression_algorithm_benchmark.hpp  compression_algorithm_test.hpp  hash_algorithms.hpp  hash_functions_benchmark.hpp  lz4_wrapper.hpp  utility.hpp  zstd_wrapper.hpp
results/: 1-100.csv  100-1000.csv  README.md  REPORT.md
src/: compression_algorithm.cpp  compression_algorithm_benchmark.cpp  compression_algorithm_test.cpp  hash_algorithms.cpp  hash_functions_benchmark.cpp  lz4_wrapper.cpp  main.cpp  zstd_wrapper.cpp
